--- a/04 Gambar/04.01. figure.html
+++ b/04 Gambar/04.01. figure.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1> penggunaan tag figure </h1>
+    <h1> penggunaan figure </h1>
 <figure>
 
 <img src="images/fti.jpg" width=500 height=500> 
@@ -13,5 +13,5 @@
 <figcaption> ini adalah logo fti </figcaption> 
 
 </figure>
-</body>
-</html>
+</body> 
+</html> 
