--- a/quis1.html
+++ b/quis1.html
@@ -4,23 +4,25 @@
     </head>
 
 <body>
- 1.1 Sejarah HTML <br>
-HTML adalah bahasa dasar untuk menampilkan halaman web pada web browser. HTML merupakan singkatan dari Hypertext Markup
-Language. Yang artinya adalah bahasa markup (penanda) berbasis text atau bisa disebut sebagai formatting language. HTML adalah bahasa
-pemograman , HTML bukanlah bahasa pemograman tetapi bahasa markup/formating.
-HTML dibuat oleh Tim Berners-Lee ketika masih bekerja untuk CERN dan dipopulerkan pertama kali oleh browser Mosaic. Selama awal tahun
+<center> <b> BAB 1 </b> </center>
+<center><b> Pengenalan HTML </b> </center>
+<b> 1.1 Sejarah HTML </b> <br>
+<b>HTML</b> adalah bahasa dasar untuk menampilkan halaman web pada web browser. HTML merupakan singkatan dari <b> <i>Hypertext Markup
+Language.</b> </i> Yang artinya adalah bahasa <i>markup</i> (penanda) berbasis text atau bisa disebut sebagai <i>formatting language</i>. HTML adalah <del>bahasa
+pemograman ,</del> HTML bukanlah bahasa pemograman tetapi bahasa markup/formating.
+HTML dibuat oleh <b>Tim Berners-Lee</b> ketika masih bekerja untuk CERN dan dipopulerkan pertama kali oleh <b></b>browser Mosaic.</b> Selama awal tahun
 1990 HTML mengalami perkembangan yang sanyat pesat. Setiap pengembangan HTML pasti akan menambahkan kemampuan dan fasilitas yang
-lebih baik dari versi sebelumnya. Sebelum suatu HTML disahkan sebagai suatu dokumen HTML standar, ia harus disetujui dulu oleh W3C untuk
+lebih baik dari versi sebelumnya. Sebelum suatu HTML disahkan sebagai suatu <b>dokumen HTML standar,</b> ia harus disetujui dulu oleh W3C untuk
 dievaluasi secara ketat. Setiap terjadi perkembangan suatu versi HTML, maka mau tak mau browser pun harus memperbaiki diri agar bisa
 mendukung kode-kode HTML yang baru tersebut. Sebab jika tidak, browser tak akan bisa menampilkan HTML tersebut.
-Saat ini HTML sudah mencapai versi 5 atau biasa disebut HTML5. Versi ini memiliki banyak fitur yang dapat digunakan dan memiliki beberapa
+Saat ini HTML sudah mencapai <u>versi 5</u> atau biasa disebut <b>HTML5.</b> Versi ini memiliki banyak fitur yang dapat digunakan dan memiliki beberapa
 tambahan penggunaan script pada editor.
-HTML biasa ditulis pada sebuah text editor (dreamweaver, notepad++,notepad, phpstrom,brackets,netbeans, dll). Ketik kutipan coding HTML diatas
-pada texteditor anda dan kemudian simpan dengan format extention .html yang menandakan bahwa file tersebut adalah file HTML.
-<br> 1.2 Perlengkapan Pendukung Belajar HTML </br>
+HTML biasa ditulis pada sebuah text editor <i>(dreamweaver, notepad++,notepad, phpstrom,brackets,netbeans, dll).</i> Ketik kutipan coding HTML diatas
+pada texteditor anda dan kemudian simpan dengan format extention <b>.html</b> yang menandakan bahwa file tersebut adalah file HTML.
+<br><b> 1.2 Perlengkapan Pendukung Belajar HTML </b></br>
 Item yang paling pending dalam melakukan pemograman web adalah editor teks atau IDE yang mampu mendukung Anda dalam menulis kode.
-Sejumlah alat pendukung yang dapat dipilih mulai dari Windows Notepad yang memungkinkan Anda menulis kode ke file sampai Adobe
-Dreamweaver yang membuat kode web dalam lingkungan WYSIWYG (What You See Is What You Get). 
-
+Sejumlah alat pendukung yang dapat dipilih mulai dari Windows Notepad yang memungkinkan Anda menulis kode ke file sampai <b><i>Adobe
+Dreamweaver</i></b> yang membuat kode web dalam lingkungan <b><u><i>WYSIWYG (What You See Is What You Get). 
+</i></u></b> 
 </body>
 </html>
